--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [alias]
 	# View the SHA, description, and history graph of the latest 20 commits
-	l = log --graph --pretty=format:'%C(yellow)%h%Creset %an: %s%Creset %C(cyan)(%cr)%Creset' --abbrev-commit --date=relative
+	l = log --graph --pretty=format:'%C(yellow)%h%Creset %s %C(blue)(%cr @ %an)%Creset' --abbrev-commit --date=relative
 	# View the current working tree status using the short format
 	s = status -s
 	# Diff
