--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	# View the SHA, description, and history graph of the latest 20 commits
 	l = log --graph --pretty=format:'%C(yellow)%h%Creset %s %C(blue)(%cr @ %an)%Creset' --abbrev-commit --date=relative
 	# View the current working tree status using the short format
-	s = status -s
+	s = status -sb
 	# Diff
 	d = diff --patch-with-stat
 	# Pull in remote changes for the current repository and all its submodules
