.gitconfig: Add top alias to list to contributors and number of commits

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,4 +1,6 @@
 [alias]
+	# View top commiters
+	top = shortlog -s -n
 	# View the SHA, description, and history graph of the latest 20 commits
 	l = log --graph --pretty=format:'%C(yellow)%h%Creset %s %C(blue)(%cr @ %an)%Creset' --abbrev-commit --date=relative
 	# View the current working tree status using the short format
