--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
+# Eclipse
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# IntelliJ
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# SublimeText project files
+*.sublime-workspace
+
 # Folder view configuration files
 .DS_Store
 Desktop.ini
