--- a/.gitconfig
+++ b/.gitconfig
@@ -31,6 +31,7 @@
 	whitespace = fix
 
 [core]
+	autocrlf = input
 	# Use custom `.gitignore` and `.gitattributes`
 	excludesfile = ~/.gitignore
 	attributesfile = ~/.gitattributes
