--- a/.gitconfig
+++ b/.gitconfig
@@ -1,28 +1,46 @@
+####################################
+# Global configuration file for Git.
+####################################
+
 [alias]
-	# View top commiters
-	top = shortlog -s -n
+	# List contributors with number of commits
+	contributors = shortlog --summary --numbered
+
 	# View the SHA, description, and history graph of the latest 20 commits
 	l = log --graph --pretty=format:'%C(yellow)%h%Creset %s %C(blue)(%cr @ %an)%Creset' --abbrev-commit --date=relative
+
 	# View the current working tree status using the short format
-	s = status -sb
+	s = status --short --branch
+
 	# Diff
 	d = diff --patch-with-stat
+
 	# Pull remote change
 	ll = pull
+
+	# Pull in remote changes for the current repository and all its submodules
+	pl = !"git pull; git submodule foreach git pull origin master"
+
 	# Push changes
 	p = push
+
 	# Clone a repository including all submodules
 	c = clone --recursive
+
 	# Commit all changes
 	ca = !git add -A && git commit -av
+
 	# Switch to a branch, creating it if necessary
 	go = checkout -B
+
 	# Show verbose output about tags, branches or remotes
 	tags = tag -l
 	branches = branch -a
 	remotes = remote -v
+
 	# Credit an author on the latest commit
-	credit = "!f() { git commit --amend --author \"$1 <$2>\" -C HEAD; }; f"
+	credit = "!f() { git commit --amend --author \"$1 <$2>\" --reuse-message=HEAD; }; f"
+
 	# Undo a `git push`
 	undopush = push -f origin HEAD^:master
 
@@ -31,50 +49,133 @@
 	whitespace = fix
 
 [core]
-	autocrlf = input
-	# Use custom `.gitignore` and `.gitattributes`
-	excludesfile = ~/.gitignore
+	# Global `.gitattributes`
 	attributesfile = ~/.gitattributes
-	# Treat spaces before tabs and all kinds of trailing whitespace as an error.
-	# [default] trailing-space: looks for spaces at the end of a line
-	# [default] space-before-tab: looks for spaces before tabs at the beginning of a line
-	whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
-[color]
-	# Use colors in Git commands that are capable of colored output when outputting to the terminal
-	ui = auto
-[color "branch"]
-	current = yellow reverse
-	local = yellow
-	remote = green
-[color "diff"]
-	meta = yellow bold
-	frag = magenta bold
-	old = red bold
-	new = green bold
-[color "status"]
-	added = yellow
-	changed = green
-	untracked = cyan
-[merge]
-	# Include summaries of merged commits in newly created merge commit messages
-	log = true
+	# Default editor for commit messages and other inputs
+	# Even when EDITOR is set to something else
+	editor=vim
+
+	# Global `.gitignore`
+	excludesfile = ~/.gitignore
+
+	# Make `git rebase` safer on OS X
+	# More info: http://www.git-tower.com/blog/make-git-rebase-safe-on-osx
+	trustctime = false
+
+	# Treat
+	#  - spaces before tabs,
+	#  - all kinds of trailing whitespace
+	# as an error.
+	whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
 # Use `origin` as the default remote on the `master` branch in all cases
 [branch "master"]
 	remote = origin
 	merge = refs/heads/master
 
+[diff]
+	# Use more time to create better diffs.
+	# E.g. matching opening/closing braces from neighbour functions.
+	# See "`git help diff` --patience" and "`git help merge` recursive".
+	algorithm = patience
+
+	# Diff will detect both renames and copies.
+	renames = copies
+
+	# Default to opendiff for visualising diffs.
+	# opendiff opens FileMerge
+	# Override with --tool=<tool> in difftool
+	# See`git help difftool`
+	# If `opendiff` is not in your $PATH, override with difftool.opendiff.path
+	# See`git help config` and search for "diff.tool"
+	tool=opendiff
+
+[difftool]
+	# Difftool will not prompt for every file.
+	# Use --prompt to override.
+	prompt = false
+
+[help]
+	# Automatically correct and execute mistyped commands
+	autocorrect = 1
+
+[merge]
+	# Include summaries of merged commits in newly created merge commit messages
+	log = true
+
+	# opendiff opens FileMerge
+	tool = opendiff
+
+[mergetool]
+	# No *.orig files left when using mergetool.
+	keepBackup = false
+
+	# Mergetool will not prompt for every file.
+	# Use --prompt to override.
+	prompt = false
+
+[pager]
+	# Use colors when paging regardless of default color setting.
+	color = true
+
+[push]
+	# See `git help config` and search for "push.default"
+	# for more information on different options of the below setting.
+	# Setting to Git 2.0 default to surpress warning message
+	# If you use branches with different remote name, use "upstream"
+	default = simple
+
+[color]
+	# Use colors in Git commands that are capable of colored output when
+	# outputting to the terminal. (This is the default setting in Git ≥ 1.8.4.)
+	ui = auto
+
+[color "branch"]
+	# Highlight current. Yellow local branches; Green remotes.
+	current = yellow reverse
+	local = yellow
+	remote = green
+
+[color "diff"]
+	# Yellow meta; Magenta line info; Red for deleltions; Green for additions.
+	meta = yellow
+	frag = magenta
+	old = red
+	new = green
+
+[color "status"]
+	# Changed files are yellow.
+	# Staged files are green.
+	# New (untracked) files are cyan.
+	# Headers are gray (white dimmed)
+	# Branch is always green even in headers
+	added = green
+	branch = green
+	changed = yellow
+	header = white dim
+	untracked = cyan
+
 # URL shorthands
+#
+# See `git help config` and search for "url.<base>"
+#
+# gh: is a shorthand for git@github.com
 [url "git@github.com:"]
 	insteadOf = "gh:"
 	pushInsteadOf = "github:"
 	pushInsteadOf = "git://github.com/"
+
+# github: is a shorthand for git://github.com/
 [url "git://github.com/"]
 	insteadOf = "github:"
+
+# gst: is a shorthand for git://gist.github.com/
 [url "git@gist.github.com:"]
 	insteadOf = "gst:"
 	pushInsteadOf = "gist:"
 	pushInsteadOf = "git://gist.github.com/"
+
+# gist: is a shofthand for git://gist.github.com/
 [url "git://gist.github.com/"]
 	insteadOf = "gist:"
