--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "spf13-vim"]
 	path = spf13-vim
-	url = git@github.com:spf13/spf13-vim.git
+	url = https://github.com/spf13/spf13-vim.git
