--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,3 +59,6 @@ set -g default-terminal "screen-256color"
 unbind %
 bind | split-window -h
 bind - split-window -v
+
+# Enable mouse integration
+set -g mouse on
