tmux: make config compatible with tmux 2.9+

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,19 +5,13 @@ set -g status-left ""
 set -g status-right "#[fg=green]#H"
 
 # default statusbar colors
-set -g status-fg white
-set -g status-bg default
-set -g status-attr bright
+set -g status-style fg=white,bg=default,bright
 
 # default window title colors
-set-window-option -g window-status-fg white
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=white,bg=default,dim
 
 # active window title colors
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=white,bg=red,bright
 
 # C-b is not acceptable -- be cool
 set-option -g prefix C-a
@@ -37,9 +31,6 @@ setw -g aggressive-resize on
 # Allows us to use C-a a <command> to send commands to a TMUX session inside 
 # another TMUX session
 bind-key a send-prefix
-
-# Highlight active window
-set-window-option -g window-status-current-bg red
 
 # hjkl pane traversal
 bind h select-pane -L
