--- a/.gitconfig
+++ b/.gitconfig
@@ -51,6 +51,12 @@
 	# and setting the current branch to track the upstream branch.
 	publish = !"git push --set-upstream origin $(git branch-name)"
 
+	# Delete merged branches, except common ones (master, develop).
+	cleanup = "!git branch --merged | grep  -v '\\*\\|master\\|develop' | xargs -n 1 git branch -d"
+
+	# "Reset Workspace".
+	rw = !"git checkout master && git pull && git cleanup"
+
 	# Recently worked on branches.
 	recent = !"git branch -v --sort=-committerdate"
 
