--- a/.gitconfig
+++ b/.gitconfig
@@ -88,11 +88,6 @@
 	# as an error.
 	whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
-# Use `origin` as the default remote on the `master` branch in all cases
-[branch "master"]
-	remote = origin
-	merge = refs/heads/master
-
 [diff]
 	# Use more time to create better diffs.
 	# E.g. matching opening/closing braces from neighbour functions.
@@ -216,3 +211,5 @@
 	# Allow running rebase on a dirty worktree.
 	# See https://git-scm.com/docs/git-rebase#Documentation/git-rebase.txt---autostash
 	autoStash = true
+[init]
+	defaultBranch = main
