--- a/.gitconfig
+++ b/.gitconfig
@@ -60,7 +60,7 @@
 	# Recently worked on branches.
 	# If arguments are provided, pass them to `git checkout`.
 	# If no arguments are provided, use fzf to select a branch.
-	sw = "!f() { if [ $# -gt 0 ]; then git checkout \"$@\"; else git checkout $(git branch -v --sort=-committerdate --color=always | fzf --ansi | awk '{print $1}'); fi; }; f"
+	sw = "!f() { set -o pipefail; git rev-parse --is-inside-work-tree > /dev/null 2>&1; if [ $? != 0 ]; then echo "$PWD is not a git repo!"; exit 1; fi; if [ $# -gt 0 ]; then git checkout \"$@\"; else git checkout $(git branch -v --sort=-committerdate --color=always | fzf --ansi | awk '{print $1}'); fi; }; f"
 
 	# Allows you to easily pick what to rebase
 	rb = "!f() { git rebase --rebase-merges --autosquash -i $(git log --pretty=oneline --color=always | fzf --ansi | cut -d ' ' -f1)^ ; }; f"
