--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ Thumbs.db
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
+
+# Claude Code local files
+.claude/settings.local.json
+CLAUDE.local.md
